@@ -6,7 +6,7 @@ Uploaders: Dmitry Shachnev <mitya57@debian.org>,
            Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Adam Majer <adamm@zombino.com>,
            Simon Quigley <tsimonq2@ubuntu.com>
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper (>= 10.9.2~),
                pkg-kde-tools,
                qtbase5-dev (>= 5.6.0),
                qtdeclarative5-private-dev,
